SubVersion: $Id$

Log:

- 11/10/2006, version 1.0.2: roms
	- re-added USB kernel module support for Titanium (still investigating
	Titanium/USB issue, seems to be libusb related).
	
- 21/02/2006, version 1.0.1: roms
	- detect i[3456]86-apple-darwin* (Intel Macs) and x86_64-apple-darwin* (probably coming soon)
	  as __MACOSX__ (kevin)
	- updated OS X and BSD ports to compile again (kevin)
	- changed TIEXPORT into TIEXPORT1
	- fixed TTY device names in Gray/BlackLink support (Sean McLaughlin)
	
- 17/09/2006, tagged as version 1.0.0: roms
	- added support for TILIBS_DEPRECATED (exports symbols which have been tagged as deprecated)
	
- 26/08/2006, version 0.1.4: roms
	- checked with Valgrind, tested and validated.
	
- 11/07/2006, version 0.1.3: roms
	- requires TiglUsb.dll version 3.6 due to Win98/Me/2k fix
	- added function to detect whether USB support is available
		(suggestion of FTP 83+ <webmaster@ftp83plus.net>).
	- look for the correct module file name on MinGW in ticables_library_init (kevin)
	- added support of PROBE_FIRST in ticables_probing_do
	- fixed strict-aliasing, incompatible pointer type and _FORTIFY_SOURCE warnings (kevin)
	- fixed endianness dependency in Linux/BSD code and lvalue casts in Win32 code (kevin)
	- fixed unconditional use of USB function reported by Lionel Debroux (kevin)
	- merged Ben's patch about USB typos and function call not captured
	- removed check for /proc/bus/usb/devices (kevin)

- 02/07/2006, version 0.1.2: roms
	- fixed DirectLink issue under Linux (TI84+ only)
	
- 05/06/2006, version 0.1.1: roms
	- renamed stdints.h into stdints1.h
	- fixed ERR_INVALID_ARG in SilverLink (linux) support
	- clean-up & overhaul in the SilverLink (linux) support
	
- 29/05/2006, version 0.1.0: roms
	- reworked USB/PID retrieval to make it independant of handle 
	close/open/probe. Please note that API external behaviour 
	didn't change !
	- added USB PIDs values and support to the API